# portable

./: main.py  pyproject.toml
portable/: base.py  schemas.py  spotify.py  youtube_music.py
