[tool.poetry]
name = "portable"
version = "0.1.0"
description = "Port your music between different services (YT Music -> Spotify for now)"
authors = ["Gaganpreet <me@gaganpreet.in>"]

[tool.poetry.dependencies]
python = "^3.8"
ytmusicapi = "^0.11.0"
spotipy = "^2.16.1"
fuzzywuzzy = "^0.18.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
